test/valid/66128_print_record_projection/print_record_projection.mag
-- Author: 66128, Daniel Sousa

fun main (_) : Unit -> Unit = 
    var record : {x: String, y: String} = {x = "Hello ", y = "World"};
    print(record.x + record.y)

    